Commit new version app.
Changes:
 Add mail sender;
 Prefer to deploy.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,7 +36,7 @@ spring.mail.password=awckkffeilywkjld
 spring.mail.properties.mail.debug=true
 
 !   Settings
-host = localhost:8080
+hostName = localhost:8080
 server.port=9000
 !       File Storage
 storage.location=./resources/uploads
